--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,9 @@
 service: sls-aws-ws-chat
 
+custom:
+  connectionsTableName: 'sls-aws-ws-chat-${self:provider.stage}_Connections'
+  messagesTableName: 'sls-aws-ws-chat-${self:provider.stage}_Messages'
+
 provider:
   name: aws
   runtime: python3.8
@@ -11,3 +15,36 @@ functions:
       - http:
           path: ping
           method: get
+
+resources:
+  Resources:
+    ConnectionsDynamoDBTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        TableName: ${self:custom.connectionsTableName}
+        AttributeDefinitions:
+          - AttributeName: ConnectionID
+            AttributeType: S
+        KeySchema:
+          - AttributeName: ConnectionID
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
+    MessagesDynamoDBTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        TableName: ${self:custom.messagesTableName}
+        AttributeDefinitions:
+          - AttributeName: Room
+            AttributeType: S
+          - AttributeName: Index
+            AttributeType: N
+        KeySchema:
+          - AttributeName: Room
+            KeyType: HASH
+          - AttributeName: Index
+            KeyType: RANGE
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
