--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "sls-aws-ws-chat",
   "version": "1.0.0",
   "description": "A sample backend that uses API Gateway to provide WebSockets for real-time chat",
-  "main": "app.py",
-  "scripts": {
-    "venv": "./.scripts/init_venv.sh"
-  },
+  "main": "handler.py",
+  "scripts": {},
   "author": "Eric Horodyski <eric@horodyski.me>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "serverless-python-requirements": "^5.1.0"
+  }
 }
